--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build-ts": "tsc -p ./tsconfig.build.json",
     "check-types": "tsc --noEmit",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
+    "preversion": "npm run test",
     "prepublish": "npm run build"
   },
   "author": "UladKasach",
